# spellcasting_parser

./: Cargo.toml  Makefile.mak  README.md  test.txt
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_test.rs
