[package]
name = "spellcasting_parser"
version = "0.1.0"
edition = "2021"
description = "Spellcasting Parser is designed to parse and validate spellcasting commands. It allows users to create and validate spells using a variety of components, including modifiers, spell types, and executable actions."
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
